# performance-calculator

./: pyproject.toml  requirements.txt  setup.cfg  tox.ini
assets/html/: test.html
src/: main.py  performance_tool.py
src/Aircraft_performance_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/latex/: pdf.py
src/model/: __init__.py  first_order_polynomial.py  first_order_rational.py  parametric_curve.py  second_order_polynomial.py  second_order_rational.py
src/my_html/: renderer.py
src/pages/: 01_general.py  02_departure.py  03_destination.py  04_alternate.py  05_summary.py
src/performance/: models.py  plotter.py  solver.py
src/utils/: converter.py  interpolator.py  plotter.py  results_processor.py
src/weightbalance/: constants.py  plotter.py  solver.py
