[metadata]
name = Aircraft performance calculator
description = Aircraft performance calculator
author = Florian Thueroff
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    model
    performance
    weightbalance
    utils
    latex
    my_html
install_requires =
    matplotlib
    fastapi>=0.68.0,<0.69.0
    pydantic>=1.8.0,<2.0.0
    uvicorn>=0.15.0,<0.16.0
    aiofiles 
    pdfkit
    streamlit
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
